Progress on tidying up sequence

--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Now It's Your Turn
 ---
 
 Let's get coding. Programming is a practical skill, so one of the best ways to learn this is through doing it.
