--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/00-program.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/00-program.mdx
@@ -32,15 +32,14 @@ To master these concepts you will need to memorise the syntax so that you can st
 :::tip[Syntax]
 In a C++ project, you have one source code file that will contain the program's main code. The following illustration shows the structure of the syntax for this, for the concepts we've covered so far.
 
-![The simplified syntax for a C++ program](./images/program-cpp-simple.png "The simplified syntax for a C++ program")
+![The simplified syntax for a C++ program](./images/program.png "The simplified syntax for a C++ program")
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 Each program starts with an optional list of **header includes**.
 These allow you to tell the compiler to include extra files that declare new [procedures and functions](/book/part-1-instructions/1-sequence/5-reference/02-procedure) that you call in your program.
 
-
-After this you can declare a `main` function - then between the braces (`{ }`), you provide a list of instructions that each end with a semicolon (`;`).
+After this you can declare a `main` function - then between the braces (`{ }`) you provide a list of instructions that each end with a semicolon (`;`).
 
 :::tip[Directive?]
 A directive is an instruction for the compiler, rather than an instruction that gets added to the program created by the compiler. You use these to let the compiler know something about the code you are writing.
