--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/10-library.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/10-library.mdx
@@ -20,7 +20,7 @@ As your programming capabilities grow, you will want to start exploring availabl
 We will explore creating our own libraries later in our journey. For now, you can see how to use library code in your program.
 
 :::tip[Syntax]
-![The syntax for a C++ program.](./images/program-cpp-simple.png "The syntax for a C++ program")
+![The syntax for a C++ program.](./images/program.png "The syntax for a C++ program")
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
