--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/3-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/3-drawing.mdx
@@ -3,7 +3,9 @@ title: Creative Drawing
 sidebar:
     label: " - Creative Drawing"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/5-reference/33-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/5-reference/34-audio/) for this task.
 
 Create a program that draws a custom picture using shapes and colors from SplashKit - while sticking with just a single sequence.
@@ -21,6 +23,7 @@ Make sure that you can identify and explain:
 - Expressions
 - Literals
 - Sequence
+</NoCopy>
 
 :::caution
 
