Edit and add videos into C2 Intro Tour

--- a/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/0-code-sequence.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/0-code-sequence.mdx
@@ -1,14 +1,17 @@
 ---
 title: Coding a sequence
-draft: true
 ---
 import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="XT7SnSN-h3M" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 
 Let's get started building something, and we can then consider how it works and the different constructs we are working with.
 
 Watch this video to:
 
-- Get started calling procedures and getting them to do things
-- Revisit the steps needed to build and run programs
+- Revisit the steps needed to build and run programs.
+- Get started calling procedures and getting them to do things.
 
 When you have gone through this video you should have the main ideas on how to call procedures, and be ready to explore these ideas further.
