--- a/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/2-code.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/2-code.mdx
@@ -1,8 +1,11 @@
 ---
 title: What is in Code?
-draft: true
 ---
 import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="uO3hMAP6uRY" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 
 In this video we look at the different aspects that we have in code.
 
