--- a/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/3-procedures.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/3-procedures.mdx
@@ -1,8 +1,11 @@
 ---
 title: Using Procedures
-draft: true
 ---
 import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="gd-9wPJB4vY" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 
 We have syntax and sequence, so now we need some things to use! In this video we introduce the SplashKit library and the procedures you can call as you start learning to code.
 
@@ -11,4 +14,4 @@ Watch this video to:
 - Learn how to use a library's documentation to use its procedures.
 - Get started using SplashKit procedures.
 
-At the end of this video you should be able to work with SplashKit, and other libraries to help you achieve your programming goals.
+At the end of this video you should be able to work with SplashKit and other libraries to help you achieve your programming goals.
