--- a/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/4-arguments.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/4-arguments.mdx
@@ -1,13 +1,16 @@
 ---
 title: Arguments
-draft: true
 ---
 import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="sIxgTlojfUY" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 
 Arguments help provide procedures with the data that they need to operate.
 
 Watch this video to:
 
-- Examine procedure signatures and how to use these to identify the arguments you need to pass in a call
+- Learn how to use procedure signatures to identify the arguments you need to pass in when calling that procedure.
 
 At the end of this video you should be able to explain the role of arguments, and use signatures to help you determine what is needed in a procedure call.
