--- a/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/5-sequence-in-action.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/5-sequence-in-action.mdx
@@ -1,14 +1,16 @@
 ---
 title: Sequence in Action
-draft: true
 ---
 import { YouTube } from 'astro-embed';
 
-Now we have going through all the more practical parts of the intro, lets dive into some details on what is happening behind the scenes.
+<div class="not-content">
+  <YouTube id="CkxSmK7AbZo" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
+Now we have played with some code, let's dive into some details on what is happening behind the scenes.
 
 Watch this video to:
 
 - See how sequence operates at a lower level within the computer.
-- Gain a deeper understanding that will help explain future 
 
-At the end of this video you should be able to work with SplashKit, and other libraries to help you achieve your programming goals.
+At the end of this video you should have a deeper understanding of how the computer executes the instructions within a program.
