--- a/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/6-procedure-call-in-action.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/2-intro-tour/6-procedure-call-in-action.mdx
@@ -1,14 +1,17 @@
 ---
 title: Procedure Call in Action
-draft: true
 ---
 import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="Q6wGlbWlRwA" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 
 Now you know how sequence works, let's have a look at how procedure calls work.
 
 Watch this video to:
 
 - Understand the lower level actions that occur when a procedure is called.
-- These insights will help you better understand your code, and how it works.
 
+These insights will help you better understand your code and how it really works.
 When you have gone through this you should be ready to start exploring these concepts in the guided tour.
