Edit pass C2 guided tour

--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
@@ -2,8 +2,6 @@
 title: Now It's Your Turn
 ---
 
-Let's get coding. Programming is a practical skill, so one of the best ways to learn this is through doing it.
-
-We'll start by learning to use graphical procedures to build a house drawing,
+Let's get coding. Programming is a practical skill, so the best way to learn is to do it!
 
 At the end of this you should feel confident building small programs that follow a fixed set of instructions.
