--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing.mdx
@@ -11,11 +11,11 @@ Let's get started with our first program! To kick things off we'll create a prog
 
     ![House output](./images/house-shown.png)
 
-    All the program needs to do is create a window, draw this scene inside it, and then show it for 5 seconds before closing - this will be a great way to get started with understanding sequence.
+    All the program needs to do is create a window, draw this scene inside it, and then show it for 5 seconds before closing. This will be a great way to get started with understanding sequence.
 
 ## Step 2: Understand what we need
 
-    We'll be using the SplashKit library, which provides lots of procedures we can use to write this program - you will have seen some in Part 0's [Guided Tour](/book/part-0-getting-started/1-building-programs/3-guided-tour/5-1-hello-world-gui/). So what are the main procedures we need to be able to write this program? Have a think about _what_ the program is doing, and see if you can list four or five things - for instance, "opening a window". Write them down :)
+    We'll be using the SplashKit library, which provides lots of procedures we can use to write this program. You will have seen some already in Part 0's [Guided Tour](/book/part-0-getting-started/1-building-programs/3-guided-tour/5-1-hello-world-gui/). So, what are the main procedures we need to be able to write this program? Have a think about _what_ the program is doing, and see if you can list four or five things -- for instance, "opening a window". Write them down!
 
     <details>
     <summary>Have you noted them down? Let's compare.</summary>
