--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main.mdx
@@ -9,7 +9,7 @@ Before we start writing our house drawing instructions, first we need to briefly
 
 ## Where do we start from?
 
-In C++, each program must contain a `main` block of code, which forms the starting point for the program. Have a look at the diagram below - the code within the braces (`{ ... }`) is what runs when the program starts.
+In C++, each program must contain a `main` block of code, which forms the starting point for the program. Have a look at the diagram below -- the code within the braces (`{ ... }`) is what runs when the program starts.
 
 ![Illustration of main](./images/main-function-pano.png)
 
@@ -38,11 +38,9 @@ Let's start writing our program by getting `main` set up!
     }
     ```
 
-    We will go into details on how the `main` works in the [next part](/book/part-2-organised-code/1-structuring-code/0-overview).
-
-    We now have an empty program set up, ready for us to add instructions in to.
+    For now, we have an empty program set up, ready for us to add our instructions.
 </Steps>
 
 :::note[What is main?]
-In C/C++, `main` is a [function](/book/part-1-instructions/2-data/5-reference/30-function). We look at these further in later chapters. For now, you will just need to enter this code as is, and make sure any instructions you want to run occur between the starting `{` and the `}` that appears at the end.
+In C/C++, `main` is a [function](/book/part-1-instructions/2-data/5-reference/30-function). We look at these [later](/book/part-2-organised-code/1-structuring-code/0-overview). For now, you will just need to enter this code as is, and make sure any instructions you want to run occur between the starting `{` and the `}` that appears at the end.
 :::
